--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
         <div class="error mx-auto" data-text="404">404</div>
         <p class="lead text-gray-800 mb-5">Página não encontrada</p>
         <p class="text-gray-500 mb-0">Parece que você encontrou uma falha na matrix...</p>
-        <a href="{{ url_for('index') }}">&larr; Voltar para o Dashboard</a>
+        <a href="{{ url_for('landing') }}">&larr; Voltar para o Dashboard</a>
     </div>
 </div>
 {% endblock %} 
