--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
             <h2>Erro Interno do Servidor</h2>
             <p class="lead">Desculpe, ocorreu um erro interno no servidor.</p>
             <p>Nossa equipe técnica foi notificada e está trabalhando para resolver o problema.</p>
-            <a href="{{ url_for('index') }}" class="btn btn-primary mt-3">
+            <a href="{{ url_for('landing') }}" class="btn btn-primary mt-3">
                 <i class="fas fa-home"></i> Voltar para a Página Inicial
             </a>
         </div>
