--- a/templates/admin/pedidos.html
+++ b/templates/admin/pedidos.html
@@ -60,7 +60,7 @@
                             <td>R$ {{ "%.2f"|format(pedido.valor_total) }}</td>
                             <td>
                                 <div class="btn-group" role="group">
-                                    <a href="{{ url_for('operacional_visualizar_pedido', id=pedido.id) }}" class="btn btn-sm btn-info">
+                                    <a href="{{ url_for('admin.visualizar_pedido', id=pedido.id) }}" class="btn btn-sm btn-info">
                                         <i class="fas fa-eye"></i>
                                     </a>
                                     <a href="{{ url_for('operacional_exportar_pdf', id=pedido.id) }}" class="btn btn-sm btn-secondary" target="_blank">
