--- a/templates/admin/visualizar_relatorio_pedidos.html
+++ b/templates/admin/visualizar_relatorio_pedidos.html
@@ -115,6 +115,40 @@
     </div>
 </div>
 
+<style>
+.bg-aguardando-pagamento {
+    background-color: #0d6efd !important;
+    color: #fff !important;
+}
+
+.bg-aguardando-aprovacao-da-arte {
+    background-color: #0dcaf0 !important;
+    color: #fff !important;
+}
+
+.bg-em-producao {
+    background-color: #ffc107 !important;
+    color: #000 !important;
+}
+
+.bg-entregue {
+    background-color: #198754 !important;
+    color: #fff !important;
+}
+
+.bg-cancelado {
+    background-color: #dc3545 !important;
+    color: #fff !important;
+}
+
+.badge {
+    padding: 0.5em 1em;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+}
+</style>
+
 {% block extra_js %}
 <script>
 $(document).ready(function() {
