--- a/templates/base.html
+++ b/templates/base.html
@@ -150,7 +150,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="{{ url_for('index') }}">Sistema de Pedidos</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="{{ url_for('landing') }}">Sistema de Pedidos</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -191,6 +191,11 @@
                         <li class="nav-item">
                             <a class="nav-link {% if request.endpoint == 'admin_relatorios' %}active{% endif %}" href="{{ url_for('admin_relatorios') }}">
                                 <i class="fas fa-file-alt"></i> Relatórios
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'admin_minha_conta' %}active{% endif %}" href="{{ url_for('admin_minha_conta') }}">
+                                <i class="fas fa-building"></i> Minha Conta
                             </a>
                         </li>
                         {% else %}
