--- a/templates/login.html
+++ b/templates/login.html
@@ -87,6 +87,11 @@
                 <div class="text-center mt-3">
                     <a href="{{ url_for('esqueceu_senha') }}" class="text-decoration-none">Esqueceu sua senha?</a>
                 </div>
+                <div class="text-center mt-3">
+                    <a href="{{ url_for('landing') }}" class="btn btn-outline-primary">
+                        <i class="fas fa-home"></i> Página Inicial
+                    </a>
+                </div>
             </div>
         </div>
     </div>
